fixed text alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,6 +221,7 @@
   padding: 0 16px 20px 16px;
   font-size: 1.5rem;
   font-weight: 700;
+  text-align: center;
 }
 
 .map-container {
